2008-01-28  Sven Neumann  <sven@gimp.org>

	* plug-ins/gimpressionist/*.[ch]: added missing copyright header.

2008-01-28  Michael Natterer  <mitch@gimp.org>

	* app/gegl/gimpoperationcolorbalance.c
	* app/gegl/gimpoperationcolorize.c
	* app/gegl/gimpoperationcurves.c
	* app/gegl/gimpoperationdesaturate.c
	* app/gegl/gimpoperationhuesaturation.c
	* app/gegl/gimpoperationlevels.c
	* app/gegl/gimpoperationposterize.c
	* app/gegl/gimpoperationthreshold.c: replace for() loops over the
	samples by while() loop counting down the passed "samples"
	parameter.

2008-01-28  Michael Natterer  <mitch@gimp.org>

	* app/gegl/gimpcolorbalanceconfig.c
	* app/gegl/gimpcolorizeconfig.c
	* app/gegl/gimpcurvesconfig.c
	* app/gegl/gimphuesaturationconfig.c
	* app/gegl/gimplevelsconfig.c
	* app/gegl/gimpoperationdesaturate.c
	* app/gegl/gimpoperationtilesink.c
	* app/gegl/gimpoperationtilesource.c
	* app/gegl/gimpposterizeconfig.c
	* app/gegl/gimpthresholdconfig.c: coding style paranoia: changed
	one byte per file.

2008-01-28  Michael Natterer  <mitch@gimp.org>

	* libgimpconfig/gimpconfig-serialize.c
	(gimp_config_serialize_property): fix API docs.

2008-01-28  Michael Natterer  <mitch@gimp.org>

	* app/gegl/gegl-types.h
	* app/gegl/Makefile.am
	* app/gegl/gimpbrightnesscontrastconfig.[ch]: new config object.

	* app/tools/gimpbrightnesscontrasttool.[ch]: use it.

2008-01-28  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/lcms.c (lcms_dialog): fixed crash on missing
	profile (bug #512529).

2008-01-28  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/lcms.c (lcms_load_profile)
	* plug-ins/common/wmf.c (load_image): fixed error messages.

2008-01-28  Michael Natterer  <mitch@gimp.org>

	* app/dialogs/keyboard-shortcuts-dialog.c
	(keyboard_shortcuts_dialog_new): don't show the horizontal
	scrollbar if it's not needed.

2008-01-28  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell.[ch] (gimp_display_shell_snap_coords):