@@ -1,3 +1,9 @@
+2008-01-28  Michael Natterer  <mitch@gimp.org>
+
+	* app/gegl/gimpoperationtilesink.c
+	* app/gegl/gimpoperationtilesource.c (process): return FALSE when
+	there is no tile manager.
+
 2008-01-28  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/gimpressionist/*.[ch]: added missing copyright header.
